tests/ui/fail/fn-self-receiver-02.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    fn foo(&mut self) {}
}
