tests/ui/fail/fn-self-receiver-02.stderr
error: must not have self receiver argument
 --> tests/ui/fail/fn-self-receiver-02.rs:5:12
  |
5 |     fn foo(&mut self) {}
  |            ^^^^^^^^^
